# obj-viewer

./: .gitignore  CMakeLists.txt  README.md
libs/lodepng/: CMakeLists.txt
libs/src/lodepng-master-build/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/src/lodepng-master-stamp/: download-lodepng-master.cmake  extract-lodepng-master.cmake  lodepng-master-build-Release.cmake  lodepng-master-configure-Debug.cmake  lodepng-master-download-.cmake  lodepng-master-download-Debug-impl.cmake  lodepng-master-download-Debug.cmake  lodepng-master-download-MinSizeRel.cmake  lodepng-master-download-RelWithDebInfo.cmake  lodepng-master-download-Release.cmake  lodepng-master-urlinfo.txt  verify-lodepng-master.cmake
libs/tmp/: lodepng-master-cfgcmd.txt
objs/: car.mtl
objs/F-15C_Eagle/: F-15C_Eagle.mtl
objs/deadpool/: dead_123456.mtl
source/: face.cpp  face.h  group.cpp  group.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_drawer.cpp  mesh_drawer.h  mesh_loader.cpp  mesh_loader.h  mtl_reader.cpp  mtl_reader.h  obj_reader.cpp  obj_reader.h  picker.cpp  picker.h  texture_mapping.cpp  texture_mapping.h  texture_reader.cpp  texture_reader.h  vector3.cpp  vector3.h
